<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <!--认证-->
    <com.zhiyicx.baseproject.widget.CombinationButton
        android:id="@+id/bt_set_vertify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        app:text="@string/vertify"></com.zhiyicx.baseproject.widget.CombinationButton>
    <!--修改密码-->
    <com.zhiyicx.baseproject.widget.CombinationButton
        android:id="@+id/bt_change_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        app:text="@string/change_password"></com.zhiyicx.baseproject.widget.CombinationButton>
    <!--清理缓存-->
    <com.zhiyicx.baseproject.widget.CombinationButton
        android:id="@+id/bt_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        app:text="@string/clean_cache"></com.zhiyicx.baseproject.widget.CombinationButton>
    <!--关于我们-->
    <com.zhiyicx.baseproject.widget.CombinationButton
        android:id="@+id/bt_about_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        app:hide_left_img="true"
        app:text="@string/about_us"></com.zhiyicx.baseproject.widget.CombinationButton>
    <!--退出登录-->
    <com.zhiyicx.baseproject.widget.CombinationButton
        android:id="@+id/bt_login_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        app:text="@string/login_out"></com.zhiyicx.baseproject.widget.CombinationButton>

</LinearLayout>
