<?xml version="1.0" encoding="utf-8"?>
<com.wcy.overscroll.OverScrollLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overscroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--绑定手机号-->
        <com.zhiyicx.baseproject.widget.button.CombinationButton
            android:id="@+id/bt_bind_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_button_height"
            android:visibility="visible"
            app:leftText="@string/account_bind_phone"
            app:leftTextLeftPadding="@dimen/spacing_mid"
            app:rightImage="@mipmap/ic_arrow_smallgrey"/>

        <!--绑定邮箱-->
        <com.zhiyicx.baseproject.widget.button.CombinationButton
            android:id="@+id/bt_bind_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_button_height"
            android:visibility="visible"
            app:leftText="@string/account_bind_email"
            app:leftTextLeftPadding="@dimen/spacing_mid"
            app:rightImage="@mipmap/ic_arrow_smallgrey"/>

        <!--绑定QQ-->
        <com.zhiyicx.baseproject.widget.button.CombinationButton
            android:id="@+id/bt_bind_qq"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_button_height"
            android:visibility="visible"
            app:leftText="@string/account_bind_qq"
            app:leftTextLeftPadding="@dimen/spacing_mid"
            app:rightImage="@mipmap/ic_arrow_smallgrey"/>

        <!--绑定微信-->
        <com.zhiyicx.baseproject.widget.button.CombinationButton
            android:id="@+id/bt_bind_wechat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_button_height"
            android:visibility="visible"
            app:leftText="@string/account_bind_wechat"
            app:leftTextLeftPadding="@dimen/spacing_mid"
            app:rightImage="@mipmap/ic_arrow_smallgrey"/>

        <!--绑定微博-->
        <com.zhiyicx.baseproject.widget.button.CombinationButton
            android:id="@+id/bt_bind_weibo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_button_height"
            android:visibility="visible"
            app:leftText="@string/account_bind_weibo"
            app:leftTextLeftPadding="@dimen/spacing_mid"
            app:rightImage="@mipmap/ic_arrow_smallgrey"/>

    </LinearLayout>

</com.wcy.overscroll.OverScrollLayout>