<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_choose_item"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/spacing_mid"
        android:paddingRight="@dimen/spacing_mid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totop_money"
            android:textColor="@color/important_for_content"
            android:textSize="@dimen/size_select_day_20sp"
            tools:text="自定义金额"/>

        <EditText
            android:id="@+id/et_input"
            style="@style/style_dynamic_editext"
            android:hint="@string/et_top_input"
            tools:hint="输入金额"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textColor="@color/important_for_content"
            android:textSize="@dimen/size_select_day_20sp"
            tools:text="元"/>
    </LinearLayout>
    <!--选择充值方式-->
    <com.zhiyicx.baseproject.widget.button.CombinationButton
        android:id="@+id/bt_recharge_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/full_button_height"
        android:layout_marginTop="@dimen/spacing_mid"
        app:leftText="@string/withdraw"
        app:leftTextLeftPadding="@dimen/spacing_mid"
        app:rightImage="@mipmap/ic_arrow_smallgrey"
        app:showLine="false"></com.zhiyicx.baseproject.widget.button.CombinationButton>


    <TextView
        android:id="@+id/bt_top"
        style="@style/style_login_button"
        android:layout_marginTop="@dimen/button_login_margin_top"
        android:text="@string/sure"
        />
</LinearLayout>

